# video-groundtruth

./: README.md
birdseye_transformation/: README.txt
birdseye_transformation/calibrations/: K.txt  projectionmatrix.txt  radialdistortion.txt  tangentialdistortion.txt
birdseye_transformation/calibrations/DuckOutputFiles/: extrinsic_yaml.txt  instrinsic_yaml.txt
birdseye_transformation/matlabcode/: main.m
external-video-pub/: CMakeLists.txt  package.xml
external-video-pub/launch/: video_pub.launch
external-video-pub/src/: video_img_pub.py
groundtruth-estimator/: CMakeLists.txt  package.xml
groundtruth-estimator/launch/: external_groundtruth.launch
groundtruth-estimator/src/: pose_estimator.py
